tests/invalid/foreign_decl_line_number.err_exp2
In file included from foreign_decl_line_number.c:21:
foreign_decl_line_number.m:18: warning: no semicolon at end of struct or union
foreign_decl_line_number.m:18: parse error before `int'
foreign_decl_line_number.m:19: warning: type defaults to `int' in declaration of `bug'
foreign_decl_line_number.m:19: warning: data definition has no type or storage class
For more information, try recompiling with `-E'.
